src/test/ui/span/E0057.stderr
error[E0057]: this function takes 1 parameter but 0 parameters were supplied
  --> $DIR/E0057.rs:3:13
   |
LL |     let a = f();
   |             ^^^ expected 1 parameter

error[E0057]: this function takes 1 parameter but 2 parameters were supplied
  --> $DIR/E0057.rs:5:13
   |
LL |     let c = f(2, 3);
   |             ^^^^^^^ expected 1 parameter

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0057`.
